--- a/apps/main/templates/main/layout.html
+++ b/apps/main/templates/main/layout.html
@@ -63,7 +63,10 @@
     <div class="modal-content">
       <h4>What is Snippet Dojo?</h4>
       <h6>Find, Share, Build and Learn</h6>
-      <p>Founded in 2018, <a href="{% url 'home' %}">Snippet Dojo</a> is a web developer site, a new community for new developers to learn and share their knowledge. With snippet code, developers can help each others solve their coding problems by sharing their snippet code with the community.</p>
+      <p>Founded in 2018, <a href="{% url 'home' %}">Snippet Dojo</a> is a web developer site, a new community for new developers to learn and share their knowledge. With Snippet Dojo, developers can help each others solve their coding problems by sharing their snippet code with the community.</p>
+      <p> <i>This is a beta version, I'm still working to improve and add more features.</i> </p>
+      <p><i>Please reports any bugs to <a href="mailto:snippetdojo@gmail.com">snippetdojo@gmail.com</a></i></p>
+      <p><i>Thank you for using <a href="{% url 'home' %}">Snippet Dojo.</a></i></p>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
